#节点3:新增过滤、ftp上传下载、debezium解析、doris输出、kafka输入输出等组件;